Codec_4/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Codec_4_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest
public class Base64_ESTest extends Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/2/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest_scaffolding
public class Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest.java:19: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest
public class Base64_ESTest extends Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/0/org/apache/commons/codec/binary/Base64_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.codec.binary.Base64_ESTest_scaffolding
public class Base64_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:22: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:23: error: cannot find symbol
      String string0 = Base64.encodeBase64String(byteArray0);
                             ^
  symbol:   method encodeBase64String(byte[])
  location: class Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:32: error: cannot find symbol
      String string0 = base64_0.encodeToString(byteArray0);
                               ^
  symbol:   method encodeToString(byte[])
  location: variable base64_0 of type Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:38: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("2x|(1$pnU6#fm");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:39: error: cannot find symbol
      String string0 = Base64.encodeBase64URLSafeString(byteArray0);
                             ^
  symbol:   method encodeBase64URLSafeString(byte[])
  location: class Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:45: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:60: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:70: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:115: error: cannot find symbol
      String string0 = base64_0.encodeToString(byteArray0);
                               ^
  symbol:   method encodeToString(byte[])
  location: variable base64_0 of type Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:143: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("C^S7xUa");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:165: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:177: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64(") than the specified maxium size of ");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:179: error: cannot find symbol
      String string0 = base64_0.encodeToString(byteArray0);
                               ^
  symbol:   method encodeToString(byte[])
  location: variable base64_0 of type Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:203: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:220: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:221: error: cannot find symbol
      Base64.encodeBase64URLSafeString(byteArray0);
            ^
  symbol:   method encodeBase64URLSafeString(byte[])
  location: class Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:288: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("{Y_");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:294: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("Input array too big, the output array would be bigger (");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:300: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("C^S7xUa");
                                              ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:336: error: incompatible types: String cannot be converted to byte[]
      Base64.decodeBase64("");
                          ^
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:341: error: cannot find symbol
      String string0 = Base64.encodeBase64URLSafeString((byte[]) null);
                             ^
  symbol:   method encodeBase64URLSafeString(byte[])
  location: class Base64
/home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java:391: error: incompatible types: String cannot be converted to byte[]
      byte[] byteArray0 = Base64.decodeBase64("@MiB^FsBm(:62dhBu");
                                              ^
Note: /home/liumengjiao/Desktop/CI/Evosuite/Codec_4/Codec/evosuite/1/org/apache/commons/codec/binary/Base64_ESTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
26 errors
